TAG: targetedalleleload-4-3-0-7
DATE: October 09, 2009
STAFF: jmason
CHANGES:
    - Correct sequence number incrementing for alleles with more than
      one variant

TAG: targetedalleleload-4-3-0-6
DATE: October 09, 2009
STAFF: jmason
CHANGES:
    - skip records with multiple parent cell lines

TAG: targetedalleleload-4-3-0-5
DATE: October 09, 2009
STAFF: jmason
CHANGES:
    - Project against cassette type not being determined
    - Move cassette types into configuration for easier updates

TAG: targetedalleleload-4-3-0-4
DATE: October 09, 2009
STAFF: jmason
CHANGES:
    - Add missing configuration options

TAG: targetedalleleload-4-3-0-3
DATE: October 08, 2009
STAFF: jmason
CHANGES:
    - Add missing lookup files to source control

TAG: targetedalleleload-4-3-0-2
DATE: October 08, 2009
STAFF: jmason
CHANGES:
    - Since we switched to iterating be cell line (instead of allele), 
      updating the note was adding a new note for each cell line. 
      This update makes it so only add one note per allele gets added.
    - Prime the allele lookup by project id with the project logical DB
      not the es cell logical db

TAG: targetedalleleload-4-3-0-1
DATE: October 08, 2009
STAFF: jmason
CHANGES:
    - Rewrite for GTLF schema changes
    - Create CSD specific additions

TAG: targetedalleleload-4-1-2-3
DATE: September 29, 2008
STAFF: jmason
CHANGES:
    - Commit accession max id updates to database
    - Use AccessionLib to automatically populate the
      prefixPart and numericPart in ACC_Accession

TAG: targetedalleleload-4-1-2-2
DATE: September 24, 2008
STAFF: jmason
CHANGES:
    - Remove extra QC processing from wrapper scrpit

TAG: targetedalleleload-4-1-2-1
DATE: September 23, 2008
STAFF: jmason
CHANGES:
    - Initial implementation of the Targeted Allele Load
    - Create KOMP allele objects in MGD 
